--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
