--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.1",
     "postcss": "^8",
+    "secure-ls": "^1.2.6",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
